adding Tailwind CSS

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,9 @@
     </h1>
 
     <a routerLink="/detail">{{ 'PAGES.HOME.GO_TO_DETAIL' | translate }}</a>
+
+    <h1 class="mt-2 text-3xl font-bold underline bg-pink-400 text-pink-600">
+        Pink Tailwind CSS text testing!
+    </h1>
+
 </div>
